--- a/Forum.html
+++ b/Forum.html
@@ -147,7 +147,8 @@
 
 <!-----------------------------debut de bloc 1------------------------------------------->
 <body>
- <div class="container1 p-3 " >
+<div id="forum">
+   <div class="container1 p-3  " >
     <div class="row ">
         <div class="col-md-12 col-sm-12 ">
                     <div class="card w-75 " style="width: 1200px;">
@@ -298,7 +299,10 @@ mais pour ce qui est de ton essai de trois mois ce n'est pas normal que tu ne so
                     </div>
         </div>
      </div>
-</div>
+
+    </div>
+  </div>
+  </div>
 <!--------------------------------fin de boc 1----------------------------------------->
 
 <!------------------------------debut bloc2 ------------------------------------------------->
