--- a/Contact.html
+++ b/Contact.html
@@ -8,14 +8,14 @@
 
     <link rel="stylesheet" type="text/css" href="ESPOIR.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
  
 </head>
 <body>
     <!------------------------------debut navbar----------------------------- -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light ">
-      <a class="navbar-brand" href="file:///home/alibenali/Bureau/espoir-20201104T073027Z-001/espoir/Accueil.html"><img src="img/téléchargement.png" class="logo"></a>
+      <a class="navbar-brand" href="Accueil.html"><img src="img/téléchargement.png" class="logo"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -23,31 +23,32 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto ">
           <li class="nav-item active">
-            <a class="nav-link" href="file:///home/alibenali/Bureau/espoir-20201104T073027Z-001/espoir/Accueil.html">Accueil <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="Accueil.html">Accueil <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="file:///home/alibenali/Bureau/espoir-20201104T073027Z-001/espoir/Apropos.html">Apropos</a>
+            <a class="nav-link" href="Apropos.html">Apropos</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="file:///home/alibenali/Bureau/espoir-20201104T073027Z-001/espoir/Forum.html">Forum</a>
+            <a class="nav-link" href="Forum.html">Forum</a>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="file:///home/alibenali/Bureau/espoir-20201104T073027Z-001/espoir/Mobilit%C3%A9.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="nav-link dropdown-toggle" href="Mobilite.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
              Equipements
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="file:///home/alibenali/Bureau/espoir-20201104T073027Z-001/espoir/Mobilit%C3%A9.html">Mobilité</a>
-              <a class="dropdown-item" href="file:///home/alibenali/Bureau/espoir-20201104T073027Z-001/espoir/Cuisine.html">Cuisine</a>
+              <a class="dropdown-item" href="Mobilite.html">Mobilité</a>
+              <a class="dropdown-item" href="Cuisine.html">Cuisine</a>
               
-              <a class="dropdown-item" href="file:///home/alibenali/Bureau/espoir-20201104T073027Z-001/espoir/Confort.html">Confort</a>
+              <a class="dropdown-item" href="espoir/Confort.html">Confort</a>
             </div>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="file:///home/alibenali/Bureau/espoir-20201104T073027Z-001/espoir/Contact.html">Contact</a>
+            <a class="nav-link" href="Contact.html">Contact</a>
 
           </li>
-            <li class="nav-item">
-            <a class="nav-link" href="file:///home/alibenali/Bureau/espoir-20201104T073027Z-001/espoir/panier.html"><img src="img/shopping-cart.png" class="logo2" alt=""></a>
+          </li>
+            <li class="nav-item ">
+            <a class="nav-link" href="panier.html"><img src="img/shopping-cart.png" class="logo2" alt=""></a>
 
           </li>
         </ul>
@@ -152,7 +153,7 @@
 <!-----------------------------debut de bloc 1------------------------------------------->
 <div class="container">
   <div class="row " >
-            <div class="col-md-4 col-sm-12 border border-danger mr-2 " style="height: 400px;">
+            <div class="col-md-4 col-sm-12 border border-danger mr-2 " id="contact-form1" style="height: 400px;">
               <h3>Heures d’ouverture:</h3>  
                 <div class="container">
                     <div class="row ">
@@ -193,9 +194,9 @@
                     </div>
                   </div>
             </div>
-            <div class="col-md-7 col-sm-12 border border-danger " style="height: 700px;">
+            <div class="col-md-7 col-sm-12 border border-danger " id="contact-form2" style="height: 700px;">
                 <h3>Contactez-nous 24/7</h3>
-                <p> Consacrer un peu de votre temps à l’association 1 Enfant, 1 Espoir, c’est avant tout vous engager librement,dans une action non rémunérée, une cause juste,au profit de l’intérêt généralet plus précisément envers un enfant dans le besoin.
+                <p> Consacrer un peu de votre temps à l’association  Espoir, c’est avant tout vous engager librement,dans une action non rémunérée, une cause juste,au profit de l’intérêt généralet plus précisément envers un enfant dans le besoin.
                      <br>
                    <br>  RIB: 08 067 0220420003706 87<br>
                      IBAN: TN59 0806 7022 0420 0037 0687
@@ -237,10 +238,10 @@
     <div class="row">
       <div class="col-md-3 col-sm-12">
         <h4>Adresse:</h4>
-        <p>78a Avenue de la république
+        <p> 78a Avenue de la république
           68000 COLMAR</p>
-          <p>(+216) 71 528 668 / (+216) 71 624 999</p>
-          <p>espoirtunisie@gmail.com</p>
+          <p> (+216) 71 528 668 / (+216) 71 624 999</p>
+          <p> espoirtunisie@gmail.com</p>
 
       </div>
       <div class="col-md-3 col-sm-12">
@@ -296,9 +297,9 @@
       </div>
       <div class="col-md-3 col-sm-12">
         <h4>Suivez-nous:</h4>
-        <a href=""><img src="img/icons8-facebook-24.png" alt=""></a>
-        <a href=""><img src="img/icons8-instagram-24.png" alt=""></a>
-        <a href=""><img src="img/icons8-twitter-24.png" alt=""></a>
+       <a href=""><img src="img/icons8-facebook-24.png" class="logo1" alt=""></a>
+        <a href=""><img src="img/icons8-instagram-24.png" class="logo1" alt=""></a>
+        <a href=""><img src="img/icons8-twitter-24.png" class="logo1" alt=""></a>
 
       </div>
       <div class="col-md-3 col-sm-12">
@@ -307,6 +308,8 @@
       </div>
     </div>
   </div>
+    <p class="text-center"><img src="img/copyright.png" class="logo3 " alt="">CopyRight AliBenAli</p>
+
 </footer>
 </body>
 </html>
