--- a/ESPOIR.html
+++ b/ESPOIR.html
@@ -241,9 +241,9 @@
       </div>
       <div class="col-md-3 col-sm-12">
         <h4>Suivez-nous:</h4>
-        <a href=""><img src="img/icons8-facebook-24.png" alt=""></a>
-        <a href=""><img src="img/icons8-instagram-24.png" alt=""></a>
-        <a href=""><img src="img/icons8-twitter-24.png" alt=""></a>
+        <a href=""><img src="img/icons8-facebook-24.png" class="logo1" alt=""></a>
+        <a href=""><img src="img/icons8-instagram-24.png" class="logo1" alt=""></a>
+        <a href=""><img src="img/icons8-twitter-24.png" class="logo1" alt=""></a>
 
       </div>
       <div class="col-md-3 col-sm-12">
