--- a/Apropos.html
+++ b/Apropos.html
@@ -162,7 +162,6 @@
             <P class="text-center">Faire surgir l’amour à la place du jugement, de la haine et de la répression, comme le remède universel à toutes les souffrances humaines, 
               est l’unique chemin qui conduit à la restauration de nos vies.
             </P>
-            <h2 class="text-center">L’ASSOCIATION ESPOIR A POUR BUT</h2>
     </div>
     
   </div>
@@ -308,13 +307,16 @@
                 </ul>
       </div>
       <div class="col-md-3 col-sm-12">
-       <h4> Rejoigner-nous:</h4>
-       <iframe style="border: 0;" src="https://twitter.com/?lang=fr" width="300" height="250" frameborder="0"></iframe>
-      </div>
-    </div>
-  </div>
-  <p class="text-center"><img src="img/copyright.png" class="logo3 " alt="">CopyRight AliBenAli</p>
-</footer>
-
-</body>
-</html>
+        <h4> Rejoigner-nous:</h4>
+ 
+        <div class="fb-page" data-href="https://www.facebook.com/AssociationEspoirCOLMAR" data-tabs="timeline" data-width="" data-height="" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/AssociationEspoirCOLMAR" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/AssociationEspoirCOLMAR">Association Espoir</a></blockquote></div>
+       </div>
+     </div>
+   </div>
+   <p class="text-center"><img src="img/copyright.png" class="logo3 " alt="">CopyRight AliBenAli</p>
+ </footer>
+ <!-------------ifram facebook -------------------------->
+ <div id="fb-root"></div>
+ <script async defer crossorigin="anonymous" src="https://connect.facebook.net/fr_FR/sdk.js#xfbml=1&version=v8.0" nonce="eQc2ma6F"></script>
+ </body>
+ </html>
