--- a/Contact.html
+++ b/Contact.html
@@ -218,7 +218,7 @@
                    
                     
                     <div class="form-group">
-                        <label for="exampleFormControlTextarea1">Example textarea</label>
+                        <label for="exampleFormControlTextarea1">Message:</label>
                         <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="ecrivez-ici"></textarea>
                     </div>
                 </form>
@@ -229,9 +229,7 @@
   </div>
 </div>
 <!--------------------------------fin de boc 1----------------------------------------->
-<!------------------------------debut bloc2 ------------------------------------------------->
 
-<!----------------------------------fin bloc 2--------------------------------->
 <!------------------------------------debut footer----------------------------->
 <footer class="border border-danger" style="background-color: orange;">
   <div class="container">
@@ -335,13 +333,16 @@
                 </ul>
       </div>
       <div class="col-md-3 col-sm-12">
-       <h4> Rejoigner-nous:</h4>
-       <iframe style="border: 0;" src="https://twitter.com/?lang=fr" width="300" height="250" frameborder="0"></iframe>
-      </div>
-    </div>
-  </div>
-  <p class="text-center"><img src="img/copyright.png" class="logo3 " alt="">CopyRight AliBenAli</p>
-</footer>
-
-</body>
-</html>
+        <h4> Rejoigner-nous:</h4>
+ 
+        <div class="fb-page" data-href="https://www.facebook.com/AssociationEspoirCOLMAR" data-tabs="timeline" data-width="" data-height="" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/AssociationEspoirCOLMAR" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/AssociationEspoirCOLMAR">Association Espoir</a></blockquote></div>
+       </div>
+     </div>
+   </div>
+   <p class="text-center"><img src="img/copyright.png" class="logo3 " alt="">CopyRight AliBenAli</p>
+ </footer>
+ <!-------------ifram facebook -------------------------->
+ <div id="fb-root"></div>
+ <script async defer crossorigin="anonymous" src="https://connect.facebook.net/fr_FR/sdk.js#xfbml=1&version=v8.0" nonce="eQc2ma6F"></script>
+ </body>
+ </html>
