--- a/Cuisine.html
+++ b/Cuisine.html
@@ -153,7 +153,7 @@
 <div class="container">
   <div class="row " id="bloc1">
     <div class="col-md-4 col-sm-6  ">
-         <div class="card mb-3" style="max-width: 540px;">
+         <div class="card mb-3 cuisine" >
   <div class="row no-gutters">
     <div class="col-md-4">
       <img src="img/cuisine/grip-tubulaire-mousse-par-6.jpg" class="card-img" alt="...">
@@ -171,7 +171,7 @@
 </div> 
     </div>
      <div class="col-md-4 col-sm-6  ">
-          <div class="card mb-3" style="max-width: 540px;">
+          <div class="card mb-3 cuisine" >
   <div class="row no-gutters">
     <div class="col-md-4">
       <img src="img/cuisine/couteau-fourchette-pour-droitier.jpg" class="card-img" alt="...">
@@ -189,7 +189,7 @@
 </div>
     </div>
      <div class="col-md-4 col-sm-6  ">
-      <div class="card mb-3" style="max-width: 540px;">
+      <div class="card mb-3 cuisine" >
   <div class="row no-gutters">
     <div class="col-md-4">
       <img src="img/cuisine/couteau-cochoir-amefa.jpg" class="card-img" alt="...">
@@ -214,7 +214,7 @@
 <div class="container">
   <div class="row " id="bloc1">
     <div class="col-md-4 col-sm-6  ">
-         <div class="card mb-3" style="max-width: 540px;">
+         <div class="card mb-3 cuisine" >
   <div class="row no-gutters">
     <div class="col-md-4">
       <img src="img/cuisine/gobelet-medeci.jpg" class="card-img" alt="...">
@@ -232,7 +232,7 @@
 </div> 
     </div>
      <div class="col-md-4 col-sm-6  ">
-          <div class="card mb-3" style="max-width: 540px;">
+          <div class="card mb-3 cuisine" >
   <div class="row no-gutters">
     <div class="col-md-4">
       <img src="img/cuisine/tasse-handycup-transparente.jpg" class="card-img" alt="...">
@@ -250,7 +250,7 @@
 </div>
     </div>
      <div class="col-md-4 col-sm-6  ">
-      <div class="card mb-3" style="max-width: 540px;">
+      <div class="card mb-3 cuisine" >
   <div class="row no-gutters">
     <div class="col-md-4">
       <img src="img/cuisine/tasse-handycup-bleue.jpg" class="card-img" alt="...">
@@ -275,7 +275,7 @@
 <div class="container">
   <div class="row " id="bloc1">
     <div class="col-md-4 col-sm-6  ">
-         <div class="card mb-3" style="max-width: 540px;">
+         <div class="card mb-3 cuisine" >
   <div class="row no-gutters">
     <div class="col-md-4">
       <img src="img/cuisine/rebord-d-assiette-droit.jpg" class="card-img" alt="...">
@@ -293,7 +293,7 @@
 </div> 
     </div>
      <div class="col-md-4 col-sm-6  ">
-          <div class="card mb-3" style="max-width: 540px;">
+          <div class="card mb-3 cuisine" >
   <div class="row no-gutters">
     <div class="col-md-4">
       <img src="img/cuisine/bol-sur-ventouse.jpg" class="card-img" alt="...">
@@ -311,7 +311,7 @@
 </div>
     </div>
      <div class="col-md-4 col-sm-6  ">
-      <div class="card mb-3" style="max-width: 540px;">
+      <div class="card mb-3 cuisine" >
   <div class="row no-gutters">
     <div class="col-md-4">
       <img src="img/cuisine/assiette-a-compartiments.jpg" class="card-img" alt="...">
@@ -336,7 +336,7 @@
 <div class="container">
   <div class="row " id="bloc1">
     <div class="col-md-4 col-sm-6  ">
-         <div class="card mb-3" style="max-width: 540px;">
+         <div class="card mb-3 cuisine" >
   <div class="row no-gutters">
     <div class="col-md-4">
       <img src="img/cuisine/chaise-de-cuisine-confort-haute.jpg" class="card-img" alt="...">
@@ -354,7 +354,7 @@
 </div> 
     </div>
      <div class="col-md-4 col-sm-6  ">
-          <div class="card mb-3" style="max-width: 540px;">
+          <div class="card mb-3 cuisine" >
   <div class="row no-gutters">
     <div class="col-md-4">
       <img src="img/cuisine/fourchette-a-viande-ergonomique.jpg" class="card-img" alt="...">
@@ -372,7 +372,7 @@
 </div>
     </div>
      <div class="col-md-4 col-sm-6  ">
-      <div class="card mb-3" style="max-width: 540px;">
+      <div class="card mb-3 cuisine" >
   <div class="row no-gutters">
     <div class="col-md-4">
       <img src="img/cuisine/mandoline-automatique-sans-fil-one-touch.jpg" class="card-img" alt="...">
@@ -397,7 +397,7 @@
 <div class="container">
   <div class="row " id="bloc1">
     <div class="col-md-4 col-sm-6  ">
-         <div class="card mb-3" style="max-width: 540px;">
+         <div class="card mb-3 cuisine" >
   <div class="row no-gutters">
     <div class="col-md-4">
       <img src="img/cuisine/rouleau-antiderapant-a-decouper-20-cm-x-9-metres.jpg" class="card-img" alt="...">
@@ -415,7 +415,7 @@
 </div> 
     </div>
      <div class="col-md-4 col-sm-6  ">
-          <div class="card mb-3" style="max-width: 540px;">
+          <div class="card mb-3 cuisine" >
   <div class="row no-gutters">
     <div class="col-md-4">
       <img src="img/cuisine/rouleau-antiderapant-a-decouper-40-cm-x-9-metres.jpg" class="card-img" alt="...">
@@ -433,7 +433,7 @@
 </div>
     </div>
      <div class="col-md-4 col-sm-6  ">
-      <div class="card mb-3" style="max-width: 540px;">
+      <div class="card mb-3 cuisine" >
   <div class="row no-gutters">
     <div class="col-md-4">
       <img src="img/cuisine/set-antiderapant-25-x-18-cm.jpg" class="card-img" alt="...">
@@ -458,7 +458,7 @@
 <div class="container">
   <div class="row " id="bloc1">
     <div class="col-md-4 col-sm-6  ">
-         <div class="card mb-3" style="max-width: 540px;">
+         <div class="card mb-3 cuisine" >
   <div class="row no-gutters">
     <div class="col-md-4">
       <img src="img/cuisine/coupe-et-ecrase-comprimes.jpg" class="card-img" alt="...">
@@ -476,7 +476,7 @@
 </div> 
     </div>
      <div class="col-md-4 col-sm-6  ">
-          <div class="card mb-3" style="max-width: 540px;">
+          <div class="card mb-3 cuisine" >
   <div class="row no-gutters">
     <div class="col-md-4">
       <img src="img/cuisine/pilulier-dosett-maxi.jpg" class="card-img" alt="...">
@@ -494,7 +494,7 @@
 </div>
     </div>
      <div class="col-md-4 col-sm-6  ">
-      <div class="card mb-3" style="max-width: 540px;">
+      <div class="card mb-3 cuisine" >
   <div class="row no-gutters">
     <div class="col-md-4">
       <img src="img/cuisine/recuperateur-de-comprimes-poppet.jpg" class="card-img" alt="...">
@@ -619,13 +619,16 @@
                 </ul>
       </div>
       <div class="col-md-3 col-sm-12">
-       <h4> Rejoigner-nous:</h4>
-       <iframe style="border: 0;" src="https://twitter.com/?lang=fr" width="300" height="250" frameborder="0"></iframe>
-      </div>
-    </div>
-  </div>
-  <p class="text-center"><img src="img/copyright.png" class="logo3 " alt="">CopyRight AliBenAli</p>
-</footer>
-
-</body>
-</html>
+        <h4> Rejoigner-nous:</h4>
+ 
+        <div class="fb-page" data-href="https://www.facebook.com/AssociationEspoirCOLMAR" data-tabs="timeline" data-width="" data-height="" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/AssociationEspoirCOLMAR" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/AssociationEspoirCOLMAR">Association Espoir</a></blockquote></div>
+       </div>
+     </div>
+   </div>
+   <p class="text-center"><img src="img/copyright.png" class="logo3 " alt="">CopyRight AliBenAli</p>
+ </footer>
+ <!-------------ifram facebook -------------------------->
+ <div id="fb-root"></div>
+ <script async defer crossorigin="anonymous" src="https://connect.facebook.net/fr_FR/sdk.js#xfbml=1&version=v8.0" nonce="eQc2ma6F"></script>
+ </body>
+ </html>
