--- a/Confort.html
+++ b/Confort.html
@@ -154,7 +154,7 @@
 <div class="container">
   <div class="row " id="bloc1">
     <div class="col-md-4 col-sm-6  ">
-         <div class="card mb-3" style="max-width: 540px;">
+         <div class="card mb-3 confort" >
   <div class="row no-gutters">
     <div class="col-md-4">
       <img src="img/confort/oreiller-cervical-cervi- (1).jpg" class="card-img" alt="...">
@@ -173,7 +173,7 @@
 </div> 
     </div>
      <div class="col-md-4 col-sm-6  ">
-          <div class="card mb-3" style="max-width: 540px;">
+          <div class="card mb-3 confort" >
   <div class="row no-gutters">
     <div class="col-md-4">
       <img src="img/confort/plateau-de-lit-ajustable-en-bois.jpg" class="card-img" alt="...">
@@ -191,7 +191,7 @@
 </div>
     </div>
      <div class="col-md-4 col-sm-6  ">
-      <div class="card mb-3" style="max-width: 540px;">
+      <div class="card mb-3 confort">
   <div class="row no-gutters">
     <div class="col-md-4">
       <img src="img/confort/reveil-gros-chiffres-parlant-indicateur-temperature.jpg" class="card-img" alt="...">
@@ -216,7 +216,7 @@
 <div class="container">
   <div class="row " id="bloc1">
     <div class="col-md-4 col-sm-6  ">
-         <div class="card mb-3" style="max-width: 540px;">
+         <div class="card mb-3 confort" >
   <div class="row no-gutters">
     <div class="col-md-4">
       <img src="img/confort/pince-attrape-tout-pliante.jpg" class="card-img" alt="...">
@@ -235,7 +235,7 @@
 </div> 
     </div>
      <div class="col-md-4 col-sm-6  ">
-          <div class="card mb-3" style="max-width: 540px;">
+          <div class="card mb-3 confort" >
   <div class="row no-gutters">
     <div class="col-md-4">
       <img src="img/confort/enfile-chaussettes-et-bas-eco.jpg" class="card-img" alt="...">
@@ -254,7 +254,7 @@
 </div>
     </div>
      <div class="col-md-4 col-sm-6  ">
-      <div class="card mb-3" style="max-width: 540px;">
+      <div class="card mb-3 confort" >
   <div class="row no-gutters">
     <div class="col-md-4">
       <img src="img/confort/pince-de-prehension-aktiv-70-cm.jpg" class="card-img" alt="...">
@@ -279,7 +279,7 @@
 <div class="container">
   <div class="row " id="bloc1">
     <div class="col-md-4 col-sm-6  ">
-         <div class="card mb-3" style="max-width: 540px;">
+         <div class="card mb-3 confort" >
   <div class="row no-gutters">
     <div class="col-md-4">
       <img src="img/confort/repose-nuque-gonflable.jpg" class="card-img" alt="...">
@@ -297,7 +297,7 @@
 </div> 
     </div>
      <div class="col-md-4 col-sm-6  ">
-          <div class="card mb-3" style="max-width: 540px;">
+          <div class="card mb-3 confort" >
   <div class="row no-gutters">
     <div class="col-md-4">
       <img src="img/confort/dossier-reglable-pour-le-dos.jpg" class="card-img" alt="...">
@@ -315,7 +315,7 @@
 </div>
     </div>
      <div class="col-md-4 col-sm-6  ">
-      <div class="card mb-3" style="max-width: 540px;">
+      <div class="card mb-3 confort" >
   <div class="row no-gutters">
     <div class="col-md-4">
       <img src="img/confort/coussin-multi-positions.jpg" class="card-img" alt="...">
@@ -340,7 +340,7 @@
 <div class="container">
   <div class="row " id="bloc1">
     <div class="col-md-4 col-sm-6  ">
-         <div class="card mb-3" style="max-width: 540px;">
+         <div class="card mb-3 confort" >
   <div class="row no-gutters">
     <div class="col-md-4">
       <img src="img/confort/baume-chinois.jpg" class="card-img" alt="...">
@@ -358,7 +358,7 @@
 </div> 
     </div>
      <div class="col-md-4 col-sm-6  ">
-          <div class="card mb-3" style="max-width: 540px;">
+          <div class="card mb-3 confort">
   <div class="row no-gutters">
     <div class="col-md-4">
       <img src="img/confort/duo-minceur-rouleau-vacuotherapie.jpg" class="card-img" alt="...">
@@ -376,7 +376,7 @@
 </div>
     </div>
      <div class="col-md-4 col-sm-6  ">
-      <div class="card mb-3" style="max-width: 540px;">
+      <div class="card mb-3 confort">
   <div class="row no-gutters">
     <div class="col-md-4">
       <img src="img/confort/masseur-lifteur-jambes-fleur.jpg" class="card-img" alt="...">
@@ -401,7 +401,7 @@
 <div class="container">
   <div class="row " id="bloc1">
     <div class="col-md-4 col-sm-6  ">
-         <div class="card mb-3" style="max-width: 540px;">
+         <div class="card mb-3 confort">
   <div class="row no-gutters">
     <div class="col-md-4">
       <img src="img/confort/tensiometre-au-poignet-compact.jpg" class="card-img" alt="...">
@@ -419,7 +419,7 @@
 </div> 
     </div>
      <div class="col-md-4 col-sm-6  ">
-          <div class="card mb-3" style="max-width: 540px;">
+          <div class="card mb-3 confort" >
   <div class="row no-gutters">
     <div class="col-md-4">
       <img src="img/confort/thermometre-auriculaire.jpg" class="card-img" alt="...">
@@ -437,7 +437,7 @@
 </div>
     </div>
      <div class="col-md-4 col-sm-6  ">
-      <div class="card mb-3" style="max-width: 540px;">
+      <div class="card mb-3 confort">
   <div class="row no-gutters">
     <div class="col-md-4">
       <img src="img/confort/ortel-c1-anatomic.jpg" class="card-img" alt="...">
@@ -462,7 +462,7 @@
 <div class="container">
   <div class="row " id="bloc1">
     <div class="col-md-4 col-sm-6  ">
-         <div class="card mb-3" style="max-width: 540px;">
+         <div class="card mb-3 confort">
   <div class="row no-gutters">
     <div class="col-md-4">
       <img src="img/confort/ceinture-lombaire-lombax-homme.jpg" class="card-img" alt="...">
@@ -480,7 +480,7 @@
 </div> 
     </div>
      <div class="col-md-4 col-sm-6  ">
-          <div class="card mb-3" style="max-width: 540px;">
+          <div class="card mb-3 confort">
   <div class="row no-gutters">
     <div class="col-md-4">
       <img src="img/confort/product.jpg" class="card-img" alt="...">
@@ -498,7 +498,7 @@
 </div>
     </div>
      <div class="col-md-4 col-sm-6  ">
-      <div class="card mb-3" style="max-width: 540px;">
+      <div class="card mb-3 confort">
   <div class="row no-gutters">
     <div class="col-md-4">
       <img src="img/confort/coton-boules.jpg" class="card-img" alt="...">
@@ -623,13 +623,16 @@
                 </ul>
       </div>
       <div class="col-md-3 col-sm-12">
-       <h4> Rejoigner-nous:</h4>
-       <iframe style="border: 0;" src="https://twitter.com/?lang=fr" width="300" height="250" frameborder="0"></iframe>
-      </div>
-    </div>
-  </div>
-  <p class="text-center"><img src="img/copyright.png" class="logo3 " alt="">CopyRight AliBenAli</p>
-</footer>
-
-</body>
-</html>
+        <h4> Rejoigner-nous:</h4>
+ 
+        <div class="fb-page" data-href="https://www.facebook.com/AssociationEspoirCOLMAR" data-tabs="timeline" data-width="" data-height="" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/AssociationEspoirCOLMAR" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/AssociationEspoirCOLMAR">Association Espoir</a></blockquote></div>
+       </div>
+     </div>
+   </div>
+   <p class="text-center"><img src="img/copyright.png" class="logo3 " alt="">CopyRight AliBenAli</p>
+ </footer>
+ <!-------------ifram facebook -------------------------->
+ <div id="fb-root"></div>
+ <script async defer crossorigin="anonymous" src="https://connect.facebook.net/fr_FR/sdk.js#xfbml=1&version=v8.0" nonce="eQc2ma6F"></script>
+ </body>
+ </html>
