--- a/Accueil.html
+++ b/Accueil.html
@@ -10,7 +10,9 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
      <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
- 
+ <link rel="icon" 
+      type="image/png" 
+      href="img/téléchargement.png">
 </head>
 <body>
     <!------------------------------debut navbar----------------------------- -->
@@ -230,10 +232,12 @@
 </div>
 <!----------------------------------fin bloc 2--------------------------------->
 
+
 <!------------------------------------debut footer----------------------------->
 <footer class="border border-danger" style="background-color: orange;">
   <div class="container">
     <div class="row">
+      <!-----------------------------Adresse------------------------------------------------->
       <div class="col-md-3 col-sm-12">
         <h4>  Adresse:</h4>
         <p><img src="img/home.png" class="logo2"  alt=""> 78a Avenue de la république
@@ -242,8 +246,9 @@
           <p> <img src="img/email.png" class="logo2"  alt=""> espoirtunisie@gmail.com</p>
 
       </div>
+      <!-----------------------------------liens-utiles-------------------------------->
       <div class="col-md-3 col-sm-12">
-        <h4>  Lien-Utile:</h4>
+        <h4>  Liens-Utiles:</h4>
       <ul class="navbar-nav mr-auto ">
           <li class="nav-item active">
             <a class="nav-link" href="Accueil.html">Accueil <span class="sr-only">(current)</span></a>
@@ -276,13 +281,13 @@
         </ul>
        
       </div>
-       
+       <!--------------------------------------------suivez-nous------------------------------->
       <div class="col-md-3 col-sm-12">
         <h4>Suivez-nous:</h4>
         <a href="https://www.facebook.com"><img src="img/icons8-facebook-24.png" class="logo1" alt=""></a>
         <a href="https://www.instagram.com/?hl=fr"><img src="img/icons8-instagram-24.png" class="logo1" alt=""></a>
         <a href="https://twitter.com/?lang=fr"><img src="img/icons8-twitter-24.png" class="logo1" alt=""></a>
-<!-----------------------------insecrivez-nous-------------->
+<!-----------------------------insecrivez-vous------------------------------------------>
   <h4>Inscrivez-vous:</h4>
          <!-- Button trigger modal -->
     <button type="button" class="btn btn-outline-light" data-toggle="modal" data-target="#exampleModal2">
@@ -336,7 +341,7 @@
       <div class="col-md-3 col-sm-12">
        <h4> Rejoigner-nous:</h4>
 <!-------------iframe facebook -------------------------->
-          <div id="fb-root ">
+          <div id="fb-root">
                 <div class="fb-page" data-href="https://www.facebook.com/AssociationEspoirCOLMAR" data-tabs="timeline" data-width="" data-height="" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/AssociationEspoirCOLMAR" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/AssociationEspoirCOLMAR">Association Espoir</a></blockquote></div>
 
           </div>
